[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/falling_platform.png" type="Texture" id=1]
[ext_resource path="res://Platforms/Falling Platform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46, 3.875 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 46.375, 5.5 )

[node name="FallingPlatform" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -7.375 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
